--- a/src/app/frontpage/frontpage.component.html
+++ b/src/app/frontpage/frontpage.component.html
@@ -1,1 +1,2 @@
-<img src="{{display$.avatar_url}}" alt="{{display$.login}}">
+<app-search></app-search>
+<img  src="{{display$.avatar_url}}" alt="{{display$.login}}">
