working search button for names

--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,4 +1,4 @@
 <form id="searchbar">
-  <input type="text" #keyword placeholder="search">
-<button (click)="search(keyword)" ><i class="fa fa-search"></i></button>
+  <input type="text" #keyword name="keyword" placeholder="search">
+<input type="button" (click)="search(keyword)" value="search">
 </form>
