adding data to frontpage

--- a/src/app/frontpage/frontpage.component.html
+++ b/src/app/frontpage/frontpage.component.html
@@ -1,3 +1,11 @@
 <app-search></app-search>
 <br>
-<img  src="{{display$.avatar_url}}" alt="{{display$.login}}">
+<br>
+<br>
+<img  src="{{display$.avatar_url}}" alt="{{display$.login}}"><br>
+{{display$.id}}
+{{display$.email}}
+{{display$.hireable}}
+{{display$.followers}}
+{{display$.following}}
+{{display$.location}}
