--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -2,3 +2,4 @@
   <input type="text" #keyword name="keyword" placeholder="search">
 <input type="button" (click)="search(keyword)" value="search">
 </form>
+{{return$.items.avatar_url}}
