--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
 <h1 class="title">{{title}}</h1>
-<div class='jumbotron'><app-search></app-search></div>
+
+<div class='jumbotron'>
+  <app-search></app-search>
+</div>
 <app-frontpage></app-frontpage>
