got data from search api

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <h1 class="title">{{title}}</h1>
-<li><a routerLink='/search' routerLinkActive='active'>search</a></li>
-<li><a routerLink='/frontpage' routerLinkActive='active'>frontpage</a></li>
+<a  class="route" routerLink='/search' routerLinkActive='active'>search</a>
+<a  class="route" routerLink='/frontpage' routerLinkActive='active'>frontpage</a>
 
 <router-outlet></router-outlet>
