--- a/src/app/frontpage/frontpage.component.css
+++ b/src/app/frontpage/frontpage.component.css
@@ -20,3 +20,9 @@ a{
 #card{
   padding-left: 350px;
 }
+.container{
+  background-image:url('https://images.pexels.com/photos/255379/pexels-photo-255379.jpeg?auto=compress&cs=tinysrgb&h=350');
+  background-repeat: no-repeat;
+  background-size:contain;
+
+}
