--- a/src/app/search/search.component.css
+++ b/src/app/search/search.component.css
@@ -1,3 +1,6 @@
 #searchbar{
   float: right;
 }
+body{
+  background-image:url('https://images.pexels.com/photos/255379/pexels-photo-255379.jpeg?auto=compress&cs=tinysrgb&h=350');
+}
