--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -6,7 +6,13 @@
 <div >
 <img src="{{return$[0].avatar_url}}" >
 <br>
-  {{return$[0].login}}
-  {{return[0].url}}
-  {{return[0].repos_url}}
+  {{return$[0].login}}<br>
+  {{return[0].url}}<br>
+    {{return$.followers_url}}
+    {{return$.following_url}}
+
+    <div *ngFor='let i = index'>
+      <a href='https://api.github.com/users/{{return$[0].login}}/repos'>repo</a>
+    </div>
+  {{return[0].repos_url}}<br>
 </div>
