added for loop of displaying users

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
+<div class="container">
+
 <h1 class="title">{{title}}</h1>
+
 <a  class="route" routerLink='/search' routerLinkActive='active'>search</a>
 <a  class="route" routerLink='/frontpage' routerLinkActive='active'>frontpage</a>
-
+<!-- <app-frontpage></app-frontpage> -->
 <router-outlet></router-outlet>
+</div>
