--- a/src/app/frontpage/frontpage.component.html
+++ b/src/app/frontpage/frontpage.component.html
@@ -1,8 +1,8 @@
 <div class='container'>
+<link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
+<div class="text"><h2 id="header">{{display$.login}}</h2></div><br>
 
-<div class="text">{{display$.login}}</div><br>
-
-<img  src="{{display$.avatar_url}}" class="img-circle" alt="{{display$.login}}"><br>
+<img  src="{{display$.avatar_url}}"  alt="{{display$.login}}"><br>
   <div class="text">
     Github ID:{{display$.id}}<br>
     Contact me @<a href="mailto:{{display$.email}}">{{display$.email}}</a><br>
@@ -11,6 +11,12 @@
     I am based at {{display$.location}}<br>
   </div>
   <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <div id="repo">
   <h1>REPOSITORIES</h1>
 
 
@@ -24,6 +30,6 @@
 </div>
 <br>
 <br>
-
+</div>
   </div>
 </div>
