added a for loop for search page

--- a/src/app/search/search.component.css
+++ b/src/app/search/search.component.css
@@ -6,10 +6,15 @@ body{
 }
 .container{
   background-color: lightblue;
-  padding: 300px;
+
 }
 .result{
   margin-bottom: 100px;
   margin-top: 10px;
   float: left;
+}
+.card{
+  width: 200px;
+
+
 }
