--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container">
 <link href="https://fonts.googleapis.com/css?family=Ewert|Hanalei+Fill" rel="stylesheet">
-<h1 class="title">{{title}}</h1>
+<h1 class="title">{{title|uppercase}}</h1>
 
 <a  class="route" routerLink='/search' routerLinkActive='active'>search</a>
 <a  class="route" routerLink='/frontpage' routerLinkActive='active'>frontpage</a>
