--- a/src/app/frontpage/frontpage.component.html
+++ b/src/app/frontpage/frontpage.component.html
@@ -4,7 +4,7 @@
 <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
 <div class="row">
   <div class="col-md-6">
-    <div class="text"><h2 id="header">{{display$.login|uppercase}}</h2></div><br>
+    <div class="text"><h2 id="header" appHighlight>{{display$.login}}</h2></div><br>
 
       <img  src="{{display$.avatar_url}}"  alt="{{display$.login}}"><br>
     </div>
